# torq-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-code.yml
src/torq/graph_edit/: __init__.py  edits.py  onnx.py
src/torq/inference/: runners.py
src/torq/model_export/: __init__.py  hf.py  onnx.py
src/torq/models/: __init__.py  export_model.py  infer_model.py
src/torq/models/moonshine/: __init__.py  _graph.py  _inference.py  export.py  infer.py  requirements.txt  validate.py
src/torq/models/smollm2/: __init__.py  _graph.py  _inference.py  export.py  infer.py
src/torq/tools/: convert_fp32.py
src/torq/tools/convert_dtype/: __main__.py  onnx.py
src/torq/utils/: demo.py  onnx.py
