# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright © 2025 Synaptics Incorporated.

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torq-tools"
version = "0.9.0"
requires-python = ">=3.10"
authors = [{ "name" = "synaptics-astra", "email" = "zSvcastrateam@synaptics.com" }]
description = "Developer tools for the Torq compiler"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = { "file" = "LICENSE" }
readme = "README.md"
dependencies = [
    "ai_edge_litert",
    "datasets",
    "huggingface_hub",
    "numpy",
    "nvidia-modelopt",
    "onnx",
    "onnxruntime",
    "onnx_graphsurgeon",
    "optimum[onnxruntime]",
    "polygraphy",
    "tokenizers",
    "transformers",
]

[project.urls]
Homepage = "https://github.com/synaptics-torq/torq-tools"
Issues = "https://github.com/synaptics-torq/torq-tools/issues"

[project.scripts]
torq-convert-fp32  = "torq.tools.convert_fp32:main"
torq-compile-model = "torq.compile:main"
torq-export-model  = "torq.models.export_model:main"
torq-infer-model   = "torq.models.infer_model:main"

[project.optional-dependencies]
moonshine = [
    "soundfile",
    "torchcodec",
    "whisper-openai",
    "jiwer",
    "openpyxl",
]
all = ["torq-tools[moonshine]"]